[package]
name = "sudothei-lisp"
version = "0.1.0"
authors = ["Paige Venuto <paigevenuto@gmail.com>"]
description = "Lisp in Rust compiled to WASM"
license = "MIT"
repository = "https://github.com/sudothei/sudothei-lisp"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#wasm-bindgen = "0.2.82"
sexp = "1.1.4"
serde = { version = "1.0.139", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
